--- a/index.css
+++ b/index.css
@@ -604,7 +604,7 @@ body {
   overflow: hidden;
 
   /* dynamische Höhe für mobile Browser */
-  max-height: 100dvh;
+  max-height: 90vh;
   height: auto;
 }
 
@@ -657,6 +657,7 @@ body {
   -webkit-overflow-scrolling: touch;
   padding: 1.5rem 2rem;
   background-color: var(--card-background);
+  flex-grow: 1;
 }
 .modal-body h4 {
   margin-top: 0;
